[NETBEANS-5327] Added the option to open the selected file or directory in the system file explorer

--- a/ide/editor.actions/src/org/netbeans/modules/editor/actions/Bundle.properties
+++ b/ide/editor.actions/src/org/netbeans/modules/editor/actions/Bundle.properties
@@ -51,3 +51,5 @@ remove-last-caret=Remove Last Caret
 add-caret-up=Duplicate Insertion Point Up
 add-caret-down=Duplicate Insertion Point Down
 OptionsDialog/Actions/edit.multicaret=Edit (Multicaret)
+
+CTL_OpenInFileExplorerDescr=Open In File Explorer
